2002-03-16  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* mkgroup.c (usage): Simplify usage output.  Generalize to allow use
	for help. Correct '?' typo to 'h'.
	(longopts): Add version option.
	(opts): Add 'v' version option.
	(print_version): New function.
	(main): Accommodate new version option.  Accommodate usage parameter
	changes.  Use usage to output help message.

2002-03-15  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c (main): When generating group 513, check for computer's
	primary domain instead of current user's domain.

2002-03-14  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c (main): When generating group 513, check for domain SID
	if computer name isn't mapped to a SID.

2001-03-11 Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* kill.cc (usage): Move to top of file.
	(getsig): Ditto.
	(forcekill): Ditto.

2002-03-06  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc: Reformat.

2002-03-06  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (longopts): Use correct short option for --version.

2002-03-06  Christopher Faylor  <cgf@redhat.com>

	* cygpath.cc: Reformat.

2002-02-27 Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* cygpath.cc (print_version): New function.
	(main): Accommodate new version function.  Initialize 'o' to prevent
	warning.

2002-02-27  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (main): Eliminate non-GNU formatting glitch.

2002-02-27  Christopher Faylor  <cgf@redhat.com>

	* ssp.c (help_desk): Fix compiler warning.

2002-02-27  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>
	    Christopher Faylor  <cgf@redhat.com>

	Change appropriate globals to statics throughout.
	* cygcheck.cc (usage): Simplify usage output.  Generalize to allow use
	for help.
	(longopts): Add version option.
	(opts): Add 'V" version option.
	(print_version): New function.
	(main): Accommodate new version option.  Accommodate usage parameter
	changes.  Use usage to output help message.
